# wikipp-bots

./: CMakeLists.txt
currencybot/: CMakeLists.txt  main.cpp
indexbot/: CMakeLists.txt  main.cpp
stormbot/: CMakeLists.txt  main.cpp
